# razel-cli

./: BUILD.bazel  Cargo.toml
src/: lib.rs  main.rs
